--- a/udacity_ethereum_report_master_2.Rmd
+++ b/udacity_ethereum_report_master_2.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
-  md_document:
-    variant: markdown_github
+  html_document: default
+  pdf_document: default
 ---
 <U>Ether Historical Data by Richard James Lopez</U>
 ========================================================
