--- a/udacity_ethereum_report_master_2.Rmd
+++ b/udacity_ethereum_report_master_2.Rmd
@@ -8,7 +8,7 @@ output:
 ## Project Details
 This report details interesting explaratory data points for a Udacity Nanodegree
 for Data Analysis project. This is a perfect opportunity to explore data
-collected related to the cryptoassset Ether and it's blockchain of Ethereum. 
+collected related to the cryptoassset Ether and its blockchain of Ethereum. 
 
 ### R libraries used
 ```{r echo=TRUE, message=FALSE, warning=FALSE, packages}
